--- a/Laperrr/Feature/FoodList/View/FoodDetail/FoodDetailViewController.xib
+++ b/Laperrr/Feature/FoodList/View/FoodDetail/FoodDetailViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FoodDetailViewController" customModule="Laperrr" customModuleProvider="target">
             <connections>
+                <outlet property="activityIndicator" destination="Qi2-I7-SYk" id="ACU-SC-c6m"/>
                 <outlet property="embedView" destination="r6T-gH-Efg" id="Sw1-mU-0Wv"/>
                 <outlet property="imageFood" destination="aXu-tD-fmL" id="I1l-8V-dtG"/>
                 <outlet property="labelFoodCategory" destination="DFU-sx-JOS" id="aCd-sh-GiJ"/>
@@ -18,6 +19,8 @@
                 <outlet property="labelInstructions" destination="5TR-pG-Yo3" id="a5R-iW-8fJ"/>
                 <outlet property="labelOrigin" destination="O5t-9W-arS" id="Nbb-x1-C1X"/>
                 <outlet property="labelTags" destination="biT-5v-3Ug" id="y9k-aG-LL6"/>
+                <outlet property="noData" destination="i50-Sb-Qfj" id="Jmn-f3-zHC"/>
+                <outlet property="scrollView" destination="7z9-Jb-ii4" id="xGR-TA-q0F"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="youtubeView" destination="qhZ-1d-Ean" id="Hs4-Wg-CBU"/>
             </connections>
@@ -62,9 +65,19 @@
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qhZ-1d-Ean" customClass="YTPlayerView">
                                             <rect key="frame" x="0.0" y="114" width="382" height="200"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Youtube Video Not Available." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i50-Sb-Qfj">
+                                                    <rect key="frame" x="75.5" y="89.5" width="231" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstItem="i50-Sb-Qfj" firstAttribute="centerX" secondItem="qhZ-1d-Ean" secondAttribute="centerX" id="PVe-Fj-EtY"/>
                                                 <constraint firstAttribute="height" constant="200" id="ame-j9-5pG"/>
+                                                <constraint firstItem="i50-Sb-Qfj" firstAttribute="centerY" secondItem="qhZ-1d-Ean" secondAttribute="centerY" id="dRI-52-B9P"/>
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wL5-49-td1">
@@ -133,12 +146,17 @@
                                 <constraint firstItem="r6T-gH-Efg" firstAttribute="top" secondItem="aXu-tD-fmL" secondAttribute="bottom" constant="16" id="xtO-BM-bki"/>
                             </constraints>
                         </view>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Qi2-I7-SYk">
+                            <rect key="frame" x="197" y="399" width="20" height="20"/>
+                        </activityIndicatorView>
                     </subviews>
                     <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="Qi2-I7-SYk" firstAttribute="centerX" secondItem="7z9-Jb-ii4" secondAttribute="centerX" id="3SM-a9-vHR"/>
                         <constraint firstItem="AgB-pR-7cl" firstAttribute="leading" secondItem="7z9-Jb-ii4" secondAttribute="leading" id="PhK-8B-xbF"/>
                         <constraint firstItem="AgB-pR-7cl" firstAttribute="height" secondItem="7z9-Jb-ii4" secondAttribute="height" priority="250" id="buG-qo-FJp"/>
                         <constraint firstAttribute="trailing" secondItem="AgB-pR-7cl" secondAttribute="trailing" id="eIq-Ox-4S2"/>
+                        <constraint firstItem="Qi2-I7-SYk" firstAttribute="centerY" secondItem="7z9-Jb-ii4" secondAttribute="centerY" id="ipC-tx-YQH"/>
                         <constraint firstAttribute="bottom" secondItem="AgB-pR-7cl" secondAttribute="bottom" id="nYx-5W-6Z0"/>
                         <constraint firstItem="AgB-pR-7cl" firstAttribute="width" secondItem="7z9-Jb-ii4" secondAttribute="width" id="rVu-tZ-4gu"/>
                         <constraint firstItem="AgB-pR-7cl" firstAttribute="top" secondItem="7z9-Jb-ii4" secondAttribute="top" id="rta-oF-Scu"/>
