--- a/Laperrr/Feature/Profile/View/ProfileViewController.xib
+++ b/Laperrr/Feature/Profile/View/ProfileViewController.xib
@@ -86,7 +86,7 @@
                                         <constraint firstAttribute="width" constant="24" id="WaA-fa-tSO"/>
                                     </constraints>
                                 </imageView>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="No9-dl-Ww3">
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="No9-dl-Ww3" userLabel="Education Stack View">
                                     <rect key="frame" x="16" y="338.5" width="382" height="1"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rpl-5g-YNE">
@@ -97,6 +97,7 @@
                                             </constraints>
                                         </view>
                                     </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="Rpl-5g-YNE" firstAttribute="leading" secondItem="No9-dl-Ww3" secondAttribute="leading" id="1iS-oJ-AAr"/>
                                         <constraint firstAttribute="bottom" secondItem="Rpl-5g-YNE" secondAttribute="bottom" id="74u-b2-lr7"/>
@@ -110,7 +111,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="luj-3e-frh">
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="luj-3e-frh" userLabel="Working Experience Stack View">
                                     <rect key="frame" x="16" y="392.5" width="382" height="1"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wdd-XW-xcW">
@@ -121,6 +122,7 @@
                                             </constraints>
                                         </view>
                                     </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="Wdd-XW-xcW" secondAttribute="bottom" id="Q6A-xe-NtA"/>
                                         <constraint firstItem="Wdd-XW-xcW" firstAttribute="top" secondItem="luj-3e-frh" secondAttribute="top" id="Vkf-Yz-FfP"/>
@@ -142,7 +144,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XtN-me-RzB">
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XtN-me-RzB" userLabel="Skills Stack View">
                                     <rect key="frame" x="16" y="446.5" width="382" height="1"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RcF-QZ-G3j">
@@ -153,6 +155,7 @@
                                             </constraints>
                                         </view>
                                     </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="RcF-QZ-G3j" secondAttribute="trailing" id="CR4-Mc-4Q2"/>
                                         <constraint firstItem="RcF-QZ-G3j" firstAttribute="leading" secondItem="XtN-me-RzB" secondAttribute="leading" id="YLt-7C-yGr"/>
@@ -169,7 +172,7 @@
                                     </constraints>
                                 </imageView>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstItem="F0S-EH-Wyx" firstAttribute="leading" secondItem="fcj-bN-ZfI" secondAttribute="trailing" constant="4" id="1t6-gf-FXs"/>
                                 <constraint firstItem="luj-3e-frh" firstAttribute="top" secondItem="F0S-EH-Wyx" secondAttribute="bottom" constant="8" id="3Tg-gz-chX"/>
@@ -202,6 +205,7 @@
                             </constraints>
                         </view>
                     </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="RBB-qq-wh2" secondAttribute="trailing" id="4yu-hg-k0M"/>
                         <constraint firstItem="RBB-qq-wh2" firstAttribute="height" secondItem="6nc-My-gGE" secondAttribute="height" priority="250" id="Jv3-Fm-CVz"/>
@@ -213,7 +217,7 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="6nc-My-gGE" secondAttribute="bottom" id="GJo-3y-MWw"/>
                 <constraint firstItem="6nc-My-gGE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="fgd-gb-X3Y"/>
@@ -230,9 +234,6 @@
         <image name="person" catalog="system" width="128" height="117"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
