--- a/Laperrr/Feature/Food/View/FoodCategories/TableViewCell/FoodCategoriesTableViewCell.xib
+++ b/Laperrr/Feature/Food/View/FoodCategories/TableViewCell/FoodCategoriesTableViewCell.xib
@@ -25,12 +25,13 @@
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MLh-Pq-LiX">
                         <rect key="frame" x="16" y="45" width="288" height="128"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="128" id="qsr-eU-fLP"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="MLh-Pq-LiX" secondAttribute="trailing" constant="16" id="4Im-Jr-G9E"/>
                     <constraint firstItem="CS1-aQ-7ak" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="BnY-Z9-um2"/>
